source/scss/_application.scss
/* ... */
#version, .version-picker--mobile {
    float: right;
    font-size: 0.7rem;
    position: relative;

    li {
        display: inline;
        font-size: inherit;
        margin-left: 0.25em;

        a {
            border-radius: 2px;
            font-weight: 600;
        }
    }
}

.version-picker--mobile {
    margin-top: 0.125em;

    li {
        font-size: 1.25em;

        a {
            background: #fff;
            opacity: 0.6;
            padding: 3px 8px;
        }

        &.current a {
            opacity: 1;
        }
    }

    @media only screen and (min-width: 500px) {
        display: none;
    }
}

#version
{
    display: none;
    z-index: 999;

    @media only screen and (min-width: 500px) {
        display: block;
        font-size: 1em;
        margin-top: -33px;
    }

    li {
        @media only screen and (min-width: 500px) {
            margin-left: 0;
        }

        a {
            background: #ad4844;
            color: #fff;
            font-size: 1.125em;
            opacity: 0.6;
            padding: 3px 8px;

            &:hover {
                background: #fff;
                color: #f4645f;
                opacity: 1;
            }
        }

        &.current a {
            opacity: 1;
        }
    }
}

#user
{
    float: right;
    margin-top: -33px;
    position: relative;
    z-index: 999;

    ul li {
        display: inline;

        a {
            color: #fff;
            color: rgba( 255, 255, 255, 0.5);
            font-size: 12px;
            font-weight: 600;
            letter-spacing: 1px;
            padding: 0 0 0 15px;
            text-transform: uppercase;

            &:hover {
                color: #f4645f;
            }

            img {
                border: 1px solid rgba( 0, 0, 0, 0.5 );
                border-radius: 2px;
                height: 25px;
                margin-right: 10px;
                margin-left: 10px;
                margin-top: -6px;
                width: 25px;
            }
        }

        &.current a {
            color: #fff;
        }
    }
}

/*
----------------------------------------------------------
----------------------------------------------------------

Logo Head

----------------------------------------------------------
----------------------------------------------------------
*/
#logo-head
{
    float: left;
    padding-top: 8px;
    transition: 250ms linear all;

    &:hover {
        margin-top: -2px;
    }

    @media only screen and (min-width: 750px) {
        padding-top: 21px;
    }
}

/*
----------------------------------------------------------
----------------------------------------------------------

Nav Primary

----------------------------------------------------------
----------------------------------------------------------
*/
nav#primary
{
    background: #fff;
    border-bottom: 1px solid #e5e5e5;
    box-shadow: 0 -5px 0 rgba(0, 0, 0, 0.03);
    float: left;
    min-height: 4.35em;
    position: relative;
    z-index: 999;
    width: 100%;

    &.fixed {
        opacity: 0.9;
        position: fixed;
        top: 0;
    }

    &.expanded {
        opacity: 1;
    }

    // @todo: Having only one max is confusing. This should be min.
    @media only screen and (max-width: 759px) {
        min-height: 3rem;
        opacity: 0.9;
        position: fixed;
        top: 0;
    }
}

.primary-nav-ul {
    background: #fff;
    border: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.05);
    display: none;
    left: 0;
    position: absolute;
    top: 4.25rem;

    @media only screen and (min-width: 750px) {
        background: none;
        border: 0;
        box-shadow: none;
        display: block;
        float: right;
        position: relative;
        top: 0;
    }

    .expanded & {
        display: block;
    }

    li {
        float: left;
        width: 100%;

        @media only screen and (min-width: 750px) {
            padding: 25px 0;
            width: auto;
        }

        a {
            border-bottom: 1px solid #eee;
            color: #aaa;
            display: block;
            font-size: 14px;
            font-weight: 600;
            letter-spacing: 1px;
            padding: 0.8em 1.4em;
            text-transform: uppercase;

            @media only screen and (min-width: 750px) {
                border-bottom: 0;
                font-size: 12px;
                padding: 0 0 0 25px;
                width: auto;

                &:hover {
                    background: inherit;
                }
            }

            // Adjust for short (horizontal, likely) devices
            @media only screen and (max-height: 400px) and (max-width: 749px) {
                padding: 0.45em 1.4em;
            }

            &:hover {
                background: #fbfbfb;
            }
        }

        &.current-item a,
        #secondary &.current-item a,
        a:hover {
            color: #f4645f;
        }
    }
}

.show-primary-nav {
    background: #fafafa;
    border: 1px solid #fcfcfc;
    border-bottom-color: #eee;
    border-right-color: #eee;
    display: block;
    float: right;
    font-size: 0.9em;
    font-weight: 600;
    margin-right: 0;
    margin-top: 0.65rem;
    padding: 0.25rem 0.75rem;
    text-transform: uppercase;

    @media only screen and (min-width: 750px) {
        display: none;
    }

    &:hover {
        background: #fbfbfb;
    }
}
/* ... */

